modification on html code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel=“shortcut icon” href=“./images\icons8-falcon-16.png” type=“images\icons8-falcon-16.png”>
     <link rel="stylesheet" href="./style.css" />
+    <title>Selina's Portfolio</title>
 </head>
 <body>
     <header class="header">
